[package]
name = "apptester_record_metrics"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde_json = "1.0.93"
sysinfo = "0.28.0"
